# ecommerc_mongodb/src/models/modelsProducts/productCategory.js
@@ -4,14 +4,11 @@ const mongoose = require('mongoose');
 const schema = new mongoose.Schema({
     category: {
         type: String,
+        required: "Digite um nome de categoria para que eu possa criar",
         trim: true
     },
     order:{
         type: Number,
-    },
-    productsName:{
-          type: mongoose.Schema.Types.ObjectId,
-          ref: "Products"
     }
 });
 
