# ecommerc_mongodb/src/routes.js
@@ -1,6 +1,15 @@
 function routes(app){
     app.use('/', require('./routes/client.js'));
+    app.use('/', require('./routes/typeOfDoc.js'));
+
+    app.use('/', require('./routes/category.js'))
+    app.use('/', require('./routes/supplier.js'));
+    app.use('/', require('./routes/products.js'));
+    //app.use('/', require('./routes/orders.js'));
     return
 }
 
 module.exports = routes
+
+
+//  app.use('/', require('./routes/client.js')); cada nova rota precisa de um novo /
