# ecommerc_mongodb/src/routes/client.js
@@ -1,20 +1,29 @@
 const express = require('express');
-const Client =require('../models/modelsClient/client')
+const Client =require('../models/modelsClient/client');
+const connectDB = require('../middlewares/connectDB');
 const router = express.Router();
 
-router.post('/client', async (req, res)=>{
+router.post('/client', connectDB, async (req, res)=>{
    //#swagger.tags = ['Cliente']
 
-  let bodyData = req.body;
+  let {name, email, address, telephone, typeOfDoc, numberDocument } = req.body;
   try {
-    const newClient = await Client.create(bodyData);
-    console.log(newClient);
+    const newClient = await Client.create({name, email, address, telephone, typeOfDoc, numberDocument });
      return res.status(201).json(newClient);
     
    } catch (error) {
-    return res.status(404).json({message: error.message});
+    return res.status(500).json({ message: 'Erro ao criar cliente', error: error.message });
    }
 
-})
+});
+
+router.get('/client/:id', connectDB, async (req, res)=>{
+  //#swagger.tags = ['Cliente']
+});
+
+router.put('/client/:id', connectDB, async (req, res)=>{
+  //#swagger.tags = ['Cliente']
+});
+
 
 module.exports = router;
